--- a/web-client/package.json
+++ b/web-client/package.json
@@ -25,6 +25,7 @@
     "angular2-material-datepicker": "^0.5.0",
     "core-js": "^2.4.1",
     "rxjs": "^5.1.0",
+    "ts-xlsx": "0.0.11",
     "zone.js": "^0.8.4"
   },
   "devDependencies": {
