--- a/web-client/package.json
+++ b/web-client/package.json
@@ -22,6 +22,7 @@
     "@angular/platform-browser": "^4.0.0",
     "@angular/platform-browser-dynamic": "^4.0.0",
     "@angular/router": "^4.0.0",
+    "@ngui/datetime-picker": "^0.16.2",
     "angular2-material-datepicker": "^0.5.0",
     "core-js": "^2.4.1",
     "rxjs": "^5.1.0",
